# analise-ementas-ia

./: .dockerignore  .env  .env.example  Dockerfile  README.md  api-docs.json  celerybeat-schedule  context.md  docker-compose.yml  error.worker.txt  implementation_plan.md  pyproject.toml  railway.json  task.md  walkthrough.md
.agents/skills/ui-ux-pro-max/: data  scripts
alembic/: env.py  script.py.mako
alembic/versions/: 2ab2aea88af2_create_voto_table.py  3c06cafdd92f_add_id_legislatura_to_politico.py  acf9b486107f_votes_and_propositions.py  d6903bf1a70b_initial_migration.py  e416ad290417_add_voto_model_and_relationships.py  e887ea656990_add_proposicao_and_votacao_models.py  f3ac90b0e084_autoria_proposicao.py
design-system/: MASTER.md
docs/: 0-ÍNDICE.md  00-COMECAR_AQUI.md  1-VISAO_GERAL_DO_PROJETO.md  2-ANALISE_TECNICA.md  3-SUMARIO_EXECUTIVO.md  4-DIAGRAMA_FLUXO_DADOS.md  5-ANALISE_FINAL.md  INDEX.md  README.md  ROADMAP.md  TECHNICAL_SPEC.md  api-docs.json
frontend/: next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/about/: page.tsx
frontend/app/deputados/: page.tsx
frontend/app/gastos/: page.tsx
frontend/app/proposicoes/: page.tsx
frontend/components/: Navbar.tsx  providers.tsx
frontend/components/deputados/: DeputyDetailsModal.tsx
frontend/components/gastos/: GastosClient.tsx
frontend/lib/: api.ts
scripts/: manual_ingest.py  run_ai_analysis.py  test_ai_analyzer.py
src/: main.py
src/core/: celery_app.py  config.py  database.py  security.py
src/models/: analise.py  base.py  dlq.py  gasto.py  politico.py  proposicao.py  votacao.py  voto.py
src/schemas/: camara_api.py  public_api.py
src/services/: ai_analyzer.py  ai_worker.py  data_fetcher.py  llm_service.py  resilience_ingestor.py
(+7 files in other folders)
