[tool.poetry]
name = "lupa-politica"
version = "0.1.0"
description = "Análise de gastos e proposições de políticos usando IA"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = "^0.27.1"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.27"}
alembic = "^1.13.1"
pydantic = {extras = ["email"], version = "^2.6.1"}
pydantic-settings = "^2.1.0"
celery = "^5.3.6"
redis = "^5.0.1"
google-genai = "^1.2.0"
google-api-core = "^2.24.1"
loguru = "^0.7.2"
asyncpg = "^0.29.0"
httpx = "^0.26.0"
flower = "^2.0.1"
psycopg2-binary = "^2.9.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.5"
watchdog = {extras = ["watchmedo"], version = "^4.0.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
